Bilder av seter
SeatDataLoader klasses addet for å få adapteren og seatselection til å virke

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         <activity android:name=".DetailArrActivity" />
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".ArrActivity" />
-        <activity android:name=".TicketActivity"></activity>
+        <activity android:name=".TicketActivity" />
+        <activity android:name=".LoadSeatData"></activity>
+        <activity android:name=".SeatSelectionActivity"></activity>
     </application>
 
 </manifest>
