--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.volley:volley:1.1.0'
+    compile "cz.intik:overflow-pager-indicator:1.2.1"
+    compile 'com.ryanjeffreybrooks:indefinitepagerindicator:1.0.8'
 }
